test: 导航断言改为按展开状态现算，新增新页与配置页断言
- UiNavigationCheck 原来把项数与索引写死，导航一改就集体失效，
  且失败信息只说明数字不对；改为读 NAV_ITEMS 现算应有项数，
  断言因此真正校验 rebuildNavigation 是否补全展开分组的子项
- 新增预设链页断言：控件、清单已载入、端到端生成出 Base64
- 新增服务页断言：五项清单、端口容器、按钮、输出只读、
  未启动时停止不可用、端口初值来自配置
- 新增配置页断言：两个新分组、地址与端口输入框、默认值与上游一致
- 新增前置断言明示 --add-opens 依赖，缺参数时一眼看出原因
- 边界规则同步 service / preset 两个新包（测试与审计脚本两份一致）

断言数：UiNavigationCheck 128 -> 169，测试文件 15 项用例只增不减。